# zsocks

./: Cargo.toml  README.md
.github/workflows/: ci.yaml  flist.yaml  release.yaml
src/: main.rs
