[package]
name = "zsocks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fast-socks5 = "0.9.6"
log = "0.4.14"
env_logger = "0.11.3"
clap = { version = "4.5.9", features = ["derive", "env"] }
tokio = { version = "1", features = [
    "io-util",
    "net",
    "time",
    "rt-multi-thread",
    "macros",
] }
tokio-stream = "0.1.6"
